switch from PrintGCTimeStamps (time-elapsed-since-jvm-start, which is almost useless) to PrintGCDateStamps (wall clock time in ISO 8601)
git-svn-id: https://svn.apache.org/repos/asf/cassandra/branches/cassandra-1.0@1196653 13f79535-47bb-0310-9956-ffa450edef68